--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react-dom": "18.0.5",
     "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.7",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.5",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
